clusters/eks-platform/apps/guestbook/redis-replica-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-replica
  namespace: team-a
  labels:
    app: redis
    role: replica
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis
      role: replica
      tier: backend
  template:
    metadata:
      labels:
        app: redis
        role: replica
        tier: backend
    spec:
      containers:
      - name: replica
        image: gcr.io/google_samples/gb-redisslave:v3
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
      nodeSelector:
        workload-tier: workload
