clusters/eks-platform/apps/guestbook/redis-replica-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-replica
  namespace: team-a
  labels:
    app: redis
    role: replica
    tier: backend
spec:
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
  selector:
    app: redis
    role: replica
    tier: backend
